Post OSMB feedback #2 refactor